[package]
name = "cryptifier"
version = "0.1.0"
edition = "2021"
authors = ["Alexi Rahman"]
description = "Cryptocurrency price monitoring and notification system"
license = "MIT"
readme = "README.md"
repository = "https://github.com/odynvolk/cryptifier/"
keywords = ["cryptocurrency", "bitcoin", "telegram", "notification", "monitoring"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.20"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
